@startuml
class ODEV01.Car {
~ String vehicleType
~ String carType
~ String doorCount
~ String transmissionType
~ String kilometer
~ Stack<String> accidentReports
~ Map<String,List<String>> changedParts
+ <<Create>> Car(String,String,String,String,String,int,int,String,String,String,String,String,Person,ArrayList<Person>)
+ String toString()
~ String pureDefinition()
+ String definition()
+ String privateDefinition()
~ String publicDefinition()
+ String getVehicleType()
+ void setVehicleType(String)
+ String getCarType()
+ void setCarType(String)
+ String getDoorCount()
+ void setDoorCount(String)
+ String getTransmissionType()
+ void setTransmissionType(String)
+ String getKilometer()
+ void setKilometer(String)
}
class ODEV01.Aircraft {
~ String vehicleType
~ Person hostes
+ <<Create>> Aircraft(String,String,String,String,String,int,int,String,Person,ArrayList<Person>)
+ <<Create>> Aircraft(String,String,String,String,String,int,int,String,Person,ArrayList<Person>,Person)
~ String pureDefinition()
+ String definition()
}
class ODEV01.Marine {
~ String vehicleType
+ <<Create>> Marine(String,String,String,String,String,int,int,String,Person,ArrayList<Person>)
~ String pureDefinition()
+ String definition()
}
class ODEV01.Person {
~ String name
~ String surname
~ Boolean haveLicence
~ String licenceCapability
+ <<Create>> Person()
+ <<Create>> Person(String,String)
+ <<Create>> Person(String,String,Boolean,String)
~ <<Create>> Person(Person)
+ String getName()
+ void setName(String)
+ String getSurname()
+ void setSurname(String)
+ Boolean getHaveLicence()
+ void setHaveLicence(Boolean)
+ String getLicenceCapability()
+ void setLicenceCapability(String)
}
class ODEV01.GenericClass<T> {
- T t
+ T get()
+ void set(T)
+ {static} boolean isEqual(GenericClass<T>,GenericClass<T>)
}
class ODEV01.Motorcycle {
~ String vehicleType
~ int wheelCount
+ <<Create>> Motorcycle(String,String,String,String,String,int,int,String,String,int,Person,ArrayList<Person>)
~ String pureDefinition()
+ String definition()
}
class ODEV01.Main {
~ {static} ArrayList<Vehicle> vehicleList
~ {static} ArrayList<Person> personList1
~ {static} ArrayList<Person> personList2
~ {static} ArrayList<Person> personList3
+ {static} void main(String[])
+ {static} void fillLists()
}
class ODEV01.Commercial {
~ String carType
+ <<Create>> Commercial(String,String,String,String,String,int,int,String,String,String,String,String,Person,ArrayList<Person>)
}
interface ODEV01.VehicleFuncs {
~ String definition()
}
abstract class ODEV01.Vehicle {
~ String type
~ String brand
~ String model
~ String color
~ String productionYear
~ String engineName
~ int enginePower
~ int engineCapacity
~ String fuelType
~ Person driver
~ ArrayList<Person> passengerList
+ <<Create>> Vehicle(String,String,String,String,String,int,int,String,Person,ArrayList<Person>)
~ {abstract}String pureDefinition()
- String privateDefinition()
~ String publicDefinition()
+ void setType(String)
}


ODEV01.Vehicle <|-- ODEV01.Car
ODEV01.Vehicle <|-- ODEV01.Aircraft
ODEV01.Vehicle <|-- ODEV01.Marine
ODEV01.Vehicle <|-- ODEV01.Motorcycle
ODEV01.Car <|-- ODEV01.Commercial
ODEV01.VehicleFuncs <|.. ODEV01.Vehicle
@enduml